[metadata]
name = stub-extractor
version = 0.0.1
description = Python Stub Extractor
long_description = file: README.md
long_description_content_type = text/markdown
keywords = types, typing, stubs
license = MIT
license_files = LICENSE.txt
url = https://github.com/srittau/stub-extractor
author = Sebastian Rittau
platforms = any
classifiers = 
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
packages = stub_extractor
python_version = >= 3.8

[options.entry_points]
console_scripts =
    stub-extractor = stub_extractor.__main__:main

[options.extras_require]
format =
    black==20.8b1
    isort>=5.7.0,<8
lint =
    mypy==0.790
    flake8>=3.8.4,<3.9
tests =
    pytest>=6.2.1,<7
